<resources>
    <string name="app_name">C Cinema</string>

    <string name="lbl_country_code">Country Code</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_verify_your_phone_number">Verify Your Phone Number</string>
    <string name="lbl_or">Or</string>
    <string name="lbl_continue_with_google">Continue With Google</string>
    <string name="lbl_terms_and_conditions"><![CDATA[By clicking, I accept the Terms & Conditions & Privacy Plolicy]]></string>
    <string name="lbl_confirm_otp">Confirm OTP</string>
    <string name="lbl_sent_otp_code">We’ve sent OTP Code</string>
    <string name="lbl_otp_info">Please enter 6-digit OTP code\nthat sent to your phone number.</string>
    <string name="lbl_enter_otp_code">Enter OTP Code</string>
    <string name="lbl_do_not_receive_otp">Don’t receive OTP? </string>
    <string name="lbl_resend_code">Resend Code</string>
    <string name="lbl_pick_region">Pick Region</string>
    <string name="lbl_search_your_location">Search your location</string>
    <string name="lbl_verify_info">We will send 6-digit sms code \nto verify your phone number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_movies">Movies</string>
    <string name="lbl_cinema">Cinema</string>
    <string name="lbl_ticket">Ticket</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_cities">Cities</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="lbl_ua">U/A ●</string>
    <string name="lbl_censor_rating">Censor Rating</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_release_date">Release Date</string>
    <string name="lbl_releasing_info">Get notify as soon as movie booking opens up in your city!</string>
    <string name="lbl_set_notification">Set Notification</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_story_line">Story Line</string>
    <string name="lbl_booking">Booking</string>
    <string name="lbl_2d">2D</string>
    <string name="lbl_3d">3D</string>
    <string name="lbl_3d_imax">3D IMAX</string>
    <string name="lbl_3d_dbox">3D DBOX</string>
    <string name="lbl_see_details"><u>See Details</u></string>
    <string name="lbl_parking">Parking</string>
    <string name="lbl_online_food">Online Food</string>
    <string name="lbl_wheel_chair">Wheel Chair</string>
    <string name="lbl_show_time_info">Long press on show timing to see seat class!</string>
    <string name="lbl_screen">SCREEN</string>
    <string name="lbl_available">● Available</string>
    <string name="lbl_taken">● Taken</string>
    <string name="lbl_your_selection">● Your Selection</string>
    <string name="lbl_filling_fast">● Filling Fast</string>
    <string name="lbl_almost_full">● Almost Full</string>
    <string name="lbl_buy_ticket">Buy Ticket</string>
    <string name="lbl_add">ADD</string>
    <string name="lbl_skip">SKIP</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_grab_a_bite">Grab a bite!</string>
    <string name="lbl_food_and_beverage">Food and Beverage</string>
    <string name="lbl_ticket_cancellation_policy">Ticket Cancellation policy</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_refund_policy_1"><![CDATA[100% Refund on F&B]]></string>
    <string name="lbl_refund_policy_2">Up to 75% Refund for Tickets</string>
    <string name="lbl_refund_policy_3">-75% refund until 2 hours before show start time\n\n-50% refund between 2 hours and 20 minutes before show start time</string>
    <string name="lbl_policy_4">1. Refund not available for Convenience fees,Vouchers, Gift Cards, Taxes etc.</string>
    <string name="lbl_policy_5">2. No cancellation within 20minute of show start time.</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_choose_your_payment_type">Choose your payment type</string>
    <string name="lbl_payment_upi">UPI</string>
    <string name="lbl_payment_gift_voucher">Gift Voucher</string>
    <string name="lbl_payment_net_banking">Net Banking</string>
    <string name="lbl_payment_mobile_wallet">Mobile Wallet</string>
    <string name="lbl_payment_redeem_point">Redeem Point</string>
    <string name="lbl_payment_credit_card_debit_card">Credit Card / Debit Card</string>
    <string name="lbl_payment_quick_pay">Quick Pay</string>
    <string name="lbl_enter_your_name">Enter your name</string>
    <string name="lbl_unlock_promo_code">Unlock Offer or Apply Promocode</string>
    <string name="lbl_ticket_confirmation">Ticket Confirmation</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_done">DONE</string>
    <string name="lbl_login_or_sign_up">Login or Sign Up</string>
    <string name="lbl_purchase_history">Purchase History</string>
    <string name="lbl_offer">Offer</string>
    <string name="lbl_location">  Location</string>
    <string name="lbl_help_and_support">Help and Support</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_your_ticket">Your Ticket</string>
    <string name="lbl_ticket_details">Ticket Details</string>
    <string name="lbl_refund_amount">Refund Amount</string>
    <string name="lbl_cancel_booking">Cancel Booking</string>
    <string name="lbl_search_the_movie">search the movie</string>
    <string name="lbl_search_the_cinema">search the cinema</string>
    <string name="lbl_price_range">Price Range</string>
    <string name="lbl_8am">8am</string>
    <string name="lbl_12pm">12pm</string>
    <string name="lbl_3500ks">3500Ks</string>
    <string name="lbl_29500ks">29500Ks</string>
    <string name="lbl_cinema_details">Cinema Details</string>
    <string name="lbl_facilities">Facilities</string>
    <string name="lbl_ticket_cancellation">Ticket Cancellation</string>


</resources>