<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/width_login_logo"
        android:layout_height="@dimen/height_login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtVerifyPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_login_text"
        android:text="@string/lbl_verify_your_phone_number"
        android:textColor="@color/white"
        android:textSize="@dimen/text_heading_1x" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOtpInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVerifyPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/lbl_verify_info"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtEnterOtpCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOtpInfo"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_login_text"
        android:text="@string/lbl_country_code"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_small" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spnCountryCode"
        android:layout_width="80dp"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_below="@id/txtEnterOtpCode"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="0dp"
        android:backgroundTint="@color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_below="@id/txtEnterOtpCode"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_toEndOf="@id/spnCountryCode"
        android:backgroundTint="@color/white"
        android:hint="@string/lbl_mobile_number"
        android:inputType="phone"
        android:textColorHint="@color/colorSecondaryText" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerifyPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtMobileNumber"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:background="@drawable/bg_button_green"
        android:text="@string/lbl_verify_your_phone_number"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/llLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnVerifyPhoneNumber"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2.3">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorSecondaryText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/lbl_or"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorSecondaryText" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginWithGoogle"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLine"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/bg_button_white"
        android:text="@string/lbl_continue_with_google"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/margin_medium_2"
        app:iconTint="@null" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/lbl_terms_and_conditions"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="@dimen/text_small" />

</RelativeLayout>